각 서비스에서 EntityAttributes를 사용하도록 수정